--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     },
     "require": {
-        "psr/log": "~1.1",
+        "psr/log": "^1.1",
         "guzzlehttp/guzzle": "^6.5|^7.0",
       "ext-json": "*"
     },
